rpm spec file: CAP_NET_BIND_SERVICE for loolwsd: 修正當設定client port 小於1024，程序本身無權限啟用port的問題

--- a/loolwsd.spec.in
+++ b/loolwsd.spec.in
@@ -137,6 +137,7 @@ getent passwd lool >/dev/null || useradd -g lool -r lool
 
 %post
 setcap cap_fowner,cap_mknod,cap_sys_chroot=ep /usr/bin/loolforkit
+setcap CAP_NET_BIND_SERVICE=+eip /usr/bin/loolwsd
 
 mkdir -p /var/cache/loolwsd && chown lool:lool /var/cache/loolwsd
 rm -rf /var/cache/loolwsd/*
