--- a/loolwsd.service
+++ b/loolwsd.service
@@ -3,8 +3,8 @@ Description=LibreOffice Online WebSocket Daemon
 After=network.target
 
 [Service]
-EnvironmentFile=-/etc/sysconfig/loolwsd
-ExecStart=/usr/bin/loolwsd --version --o:sys_template_path=/opt/lool/systemplate --o:child_root_path=/opt/lool/child-roots --o:file_server_root_path=/usr/share/libreoffice-online
+EnvironmentFile=-/etc/sysconfig/oxoolwsd
+ExecStart=/usr/bin/oxoolwsd --version --o:sys_template_path=/usr/share/oxoolwsd/systemplate --o:lo_template_path=/opt/libreoffice --o:child_root_path=/usr/share/oxoolwsd --o:file_server_root_path=/usr/share/oxoolwsd
 User=lool
 KillMode=control-group
 Restart=always
