新增 Material Components Web 元件支援

--- a/loleaflet/Makefile.am
+++ b/loleaflet/Makefile.am
@@ -81,6 +81,7 @@ LOLEAFLET_CSS =\
 	$(builddir)/node_modules/smartmenus/dist/css/sm-core-css.css \
 	$(builddir)/node_modules/smartmenus/dist/css/sm-simple/sm-simple.css \
 	$(srcdir)/css/menubar.css \
+	$(srcdir)/mdc/css/material-components-web.css \
 	$(builddir)/fonts/font-awesome.min.css \
 	$(builddir)/node_modules/jquery-ui/themes/ui-lightness/jquery-ui.css
 
@@ -121,6 +122,7 @@ PLUGINS_JS =\
 	jquery.mCustomScrollbar.js \
 	w2ui-1.5.rc1.js \
 	toolbar.js \
+	material-components-web.js \
 	main.js
 
 PLUGINS_JS_SRC = $(shell find $(srcdir)/js -name '*.js')
@@ -183,6 +185,7 @@ $(builddir)/dist/bundle.js: $(NODE_MODULES_JS_DST) \
 	$(builddir)/dist/global.js \
 	$(builddir)/dist/w2ui-1.5.rc1.js \
 	$(builddir)/dist/toolbar.js \
+	$(builddir)/dist/material-components-web.js \
 	$(builddir)/dist/main.js
 	@touch $@
 else
@@ -207,6 +210,7 @@ $(builddir)/dist/bundle.js: $(NODE_MODULES_JS_SRC) \
 	$(srcdir)/js/jquery.mCustomScrollbar.js \
 	$(srcdir)/js/w2ui-1.5.rc1.js \
 	$(srcdir)/js/toolbar.js \
+	$(srcdir)/mdc/js/material-components-web.js \
 	$(srcdir)/js/main.js
 	@echo "Uglify loleaflet js files..."
 	NODE_PATH=$(abs_builddir)/node_modules $(NODE) node_modules/uglify-js/bin/uglifyjs \
@@ -217,6 +221,7 @@ $(builddir)/dist/bundle.js: $(NODE_MODULES_JS_SRC) \
 		$(srcdir)/js/w2ui-1.5.rc1.js \
 		$(builddir)/build/dist/loleaflet-src.js \
 		$(srcdir)/js/toolbar.js \
+		$(srcdir)/mdc/js/material-components-web.js \
 		$(srcdir)/js/main.js \
 		--source-map --output $@
 endif
@@ -255,6 +260,10 @@ $(builddir)/dist/src/%.js: $(srcdir)/src/%.js
 	@cp $< $@
 
 $(builddir)/dist/%.js: $(srcdir)/js/%.js
+	@mkdir -p $(dir $@)
+	@cp $< $@
+
+$(builddir)/dist/material-components-web.js: $(srcdir)/mdc/js/material-components-web.js
 	@mkdir -p $(dir $@)
 	@cp $< $@
 
@@ -298,6 +307,7 @@ pot:
 		admin/src/AdminSocketSettings.js \
 		admin/src/Util.js \
 		js/toolbar.js \
+		mdc/js/material-components-web.js \
 		src/control/Control.AlertDialog.js \
 		src/control/Control.ContextMenu.js \
 		src/control/Control.DocumentRepair.js \
